# openwrt-dethrash

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/skills/close/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/start/: SKILL.md
cmd/station-resolver/: build.sh  go.mod  main.go  main_test.go
docs/: grafana-vl-plugin.md  releasing.md  technitium-dhcp-api.md
docs/plans/: 2026-02-16-wifi-dethrash.md  openwrt-feed-server.md
openwrt/: Makefile  build-ipk.sh
openwrt/files/usr/lib/lua/prometheus-collectors/: wifi_dethrash.lua
openwrt/package/wifi-dethrash-collector/: Makefile
openwrt/wifi-dethrash-collector/: Makefile
src/dethrash/: __main__.py
src/dethrash/sources/: vl.py
src/wifi_dethrash/: __main__.py  cli.py  config.py  dashboard.py  grafana.py  recommender.py  report.py  utils.py
src/wifi_dethrash/analyzers/: overlap.py  thrashing.py  weak.py
src/wifi_dethrash/sources/: vl.py  vm.py
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_grafana.py  test_overlap.py  test_recommender.py  test_report.py  test_thrashing.py  test_utils.py  test_vl.py  test_vm.py  test_weak.py
