[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-dethrash"
version = "0.3.0"
description = "WiFi mesh thrashing analyzer for OpenWrt"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "truststore>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pyright>=1.1",
]

[project.scripts]
wifi-dethrash = "wifi_dethrash.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
